[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project.urls]
Source = 'https://github.com/oeg-upm/rmldoc'
Tracker = 'https://github.com/oeg-upm/rmldoc/issues'
CI = 'https://github.com/oeg-upm/rmldoc/actions'
History = 'https://github.com/oeg-upm/rmldoc/releases'

[project]
name = "rmldoc"
version = "0.1.0"
description = "Rmldoc is a tool that generates documentation of RML mappings"
readme = "README.md"
authors = [{ name = "Jhon Toledo", email = "ja.toledo@upm.es" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
realpython = "rmldoc.__main__:main"

include = ["rmldoc/Templates/*.md"]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]